--- a/src/components/header/styles.module.scss
+++ b/src/components/header/styles.module.scss
@@ -4,9 +4,12 @@
   background-color: $dark-500;
   width: 100%;
   height: $header-height;
+  position: sticky;
+  top: 0;
+  z-index: 1;
 
   :global {
-    .content-container {
+    .container {
       height: 100%;
       display: flex;
       justify-content: space-between;
@@ -15,6 +18,5 @@
         padding: 16px 16px 8px;
       }
     }
-
   }
 }
