--- a/src/components/recordComponent/styles.module.scss
+++ b/src/components/recordComponent/styles.module.scss
@@ -11,37 +11,46 @@
       left: 0;
       width: 100%;
       height: 100%;
-      color: $primary-300;
+      background-color: $dark-600;
+      border: solid 24px $primary-300;
     }
 
     img {
+      position: relative;
       width: 100%;
       height: 100%;
       object-fit: cover;
+      z-index: 1;
     }
 
     .content-wrapper {
       position: absolute;
       display: flex;
       flex-direction: column;
-      justify-content: center;
-      top: 0;
-      left: 0;
+      align-items: center;
+      top: 50%;
+      left: 50%;
       transform: translate(-50%, -50%);
+      z-index: 2;
+      text-align: center;
 
       .title {
         color: $primary-300;
         font-size: 25px;
         font-family: 'Inter', sans-serif;
         margin-bottom: 10px;
+        white-space: nowrap;
       }
 
       .description-wrapper {
         width: 160px;
         height: 24px;
         background-color: $primary-400;
+        display: flex;
+        justify-content: center;
 
         .description {
+          margin-top: 2px;
           color: $light;
           font-size: 14px;
         }
