load more data and line chart

--- a/src/pages/myRecord/MyRecord.module.scss
+++ b/src/pages/myRecord/MyRecord.module.scss
@@ -117,6 +117,10 @@
             .content {
               margin-top: 8px;
               font-size: 12px;
+
+              .note {
+                @include line-clamp(5);
+              }
             }
           }
         }
