--- a/src/pages/home/Home.module.scss
+++ b/src/pages/home/Home.module.scss
@@ -4,9 +4,12 @@
 .homepageContainer {
   :global {
     .banner-container {
+      display: flex;
+      width: 100%;
+      height: 312px;
+
       .left {
         position: relative;
-        height: 312px;
         width: 42vw;
 
         img {
@@ -40,6 +43,16 @@
           .percent {
             font-size: 25px;
           }
+        }
+      }
+
+      .right {
+        width: 58vw;
+        
+        .chart-wrapper {
+          margin-left: auto;
+          margin-right: auto;
+          width: 600px;
         }
       }
     }
