--- a/src/pages/column/Column.module.scss
+++ b/src/pages/column/Column.module.scss
@@ -14,6 +14,8 @@
     }
 
     .column-section {
+      margin-bottom: 64px;
+
       .column-list {
         display: grid;
         grid-template-columns: repeat(4, 1fr);
@@ -23,7 +25,7 @@
       .btn-wrapper {
         display: flex;
         justify-content: center;
-  
+
         .btn-load-more {
           cursor: pointer;
           width: 296px;
