--- a/src/components/common/styles.scss
+++ b/src/components/common/styles.scss
@@ -8,3 +8,16 @@
         height: 100vh;
     }
 }
+
+.global-loading-component {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255,255,255,0.9);
+    z-index: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
