--- a/src/pages/myRecord/MyRecord.module.scss
+++ b/src/pages/myRecord/MyRecord.module.scss
@@ -97,50 +97,54 @@
           font-size: 22px;
         }
 
-        .diary-list {
-          display: grid;
-          grid-template-columns: repeat(4, 1fr);
-          grid-gap: 12px;
-          width: 100%;
+        .diary-list-container {
+          position: relative;
 
-          .diary-item-wrapper {
-            border: solid 2px $gray-400;
-            padding: 16px;
+          .diary-list {
+            display: grid;
+            grid-template-columns: repeat(4, 1fr);
+            grid-gap: 12px;
+            width: 100%;
 
-            .date-time {
-              display: flex;
-              flex-direction: column;
-              font-size: 18px;
-              line-height: 24px;
-            }
+            .diary-item-wrapper {
+              border: solid 2px $gray-400;
+              padding: 16px;
 
-            .content {
-              margin-top: 8px;
-              font-size: 12px;
+              .date-time {
+                display: flex;
+                flex-direction: column;
+                font-size: 18px;
+                line-height: 24px;
+              }
 
-              .note {
-                @include line-clamp(5);
+              .content {
+                margin-top: 8px;
+                font-size: 12px;
+
+                .note {
+                  @include line-clamp(5);
+                }
               }
             }
           }
-        }
 
-        .btn-wrapper {
-          display: flex;
-          justify-content: center;
-          margin-top: 24px;
-          margin-bottom: 64px;
-    
-          .btn-load-more {
-            cursor: pointer;
-            width: 296px;
-            height: 56px;
-            color: $light;
-            font-size: 18px;
-            outline: none;
-            border: none;
-            background: linear-gradient(68deg, rgba(255, 204, 33, 1) 0%, rgba(255, 150, 60, 1) 100%);
-            border-radius: $border-radius;
+          .btn-wrapper {
+            display: flex;
+            justify-content: center;
+            margin-top: 24px;
+            margin-bottom: 64px;
+
+            .btn-load-more {
+              cursor: pointer;
+              width: 296px;
+              height: 56px;
+              color: $light;
+              font-size: 18px;
+              outline: none;
+              border: none;
+              background: linear-gradient(68deg, rgba(255, 204, 33, 1) 0%, rgba(255, 150, 60, 1) 100%);
+              border-radius: $border-radius;
+            }
           }
         }
       }
