--- a/src/components/header/Navigator.module.scss
+++ b/src/components/header/Navigator.module.scss
@@ -22,5 +22,12 @@
         margin-right: map-get($spacers, "sm");
       }
     }
+
+    .menu-icon-wrapper {
+      position: relative;
+      .hamburger-menu {
+
+      }
+    }
   }
 }
